--- a/src/Portfolio/Portfolio.css
+++ b/src/Portfolio/Portfolio.css
@@ -15,7 +15,7 @@
   align-items: center;
   background-color: #2431ae;
   text-align: center;
-  color: #11a9cb;
+  color: white;
   max-width: 100vw;
 }
 
@@ -26,13 +26,23 @@
 }
 
 .nav-btn {
-
-}
-
-.navbar {
+  padding: 5px;
   text-decoration: none;
   margin-top: 0;
-  margin-right: 1vw;
+  margin-right: 2vw;
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.nav-buttons {
+  text-decoration: none;
+  margin-top: 0;
+  margin-right: 2vw;
 }
 
 .main-container {
@@ -55,11 +65,11 @@
 }
 
 .Headshot {
-  margin-top: 10vh;
+  margin-top: 2vh;
   margin-left: 10%;
-  margin-right: auto;
-  border-radius: 50px 50px 10px 10px;
-  scale: 1.5;
+  margin-right: 15vw;
+  border-radius: 10px 10px 10px 10px;
+  scale: 1;
 }
 
 .project-container {
@@ -110,7 +120,7 @@
 }
 
 .project-text {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   text-align: left;
   width: 25vw;
   margin: 0;
